adjusted some bugs on small screens

--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -1,11 +1,11 @@
 // Imprted files
 
-@use "../Styles/CMV.scss" as *;
+@use "../Styles/VM.scss" as *;
 
 /* Global Rules */
 
 ::-webkit-scrollbar {
-  width: 0.7em;
+  width: 0.5em;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -83,6 +83,7 @@ section {
   text-transform: uppercase;
   transition-duration: 0.8s;
   z-index: 3;
+  user-select: none;
   &::before,
   &::after {
     @include pseudo-element("");
@@ -131,7 +132,7 @@ section {
   @keyframes header-fill {
     100% {
       height: 100%;
-      width: 50%;
+      width: 51%;
       border-radius: 0;
       -webkit-border-radius: 0;
       -moz-border-radius: 0;
@@ -139,7 +140,7 @@ section {
       -o-border-radius: 0;
     }
   }
-  @include max-mq(450px) {
+  @include max-mq(500px) {
     font-size: 1rem;
     padding: 0.5em;
     outline: 2px solid black;
@@ -184,11 +185,12 @@ header {
     color: $main-color;
     font-size: 2rem;
     font-weight: bold;
+    line-height: 1;
   }
   nav {
     > .nav-links {
       display: flex;
-      gap: 2em 1em;
+      gap: 1em;
       justify-content: center;
       flex-wrap: wrap;
       > li {
@@ -227,10 +229,10 @@ header {
               display: none;
             }
             li {
-              padding: 0.5em;
+              padding: 0.3em;
               border-top: 1px solid #eee;
               border-bottom: 1px solid #eee;
-              font-size: 1.2rem;
+              font-size: .8rem;
               font-weight: bold;
               color: $main-color;
               position: relative;
@@ -265,6 +267,9 @@ header {
               .megamenu-cont {
                 columns: 2;
                 column-gap: 4em;
+                li {
+                  font-size: 1.2rem;
+                }
               }
             }
             @include min-mq(1200px) {
@@ -587,14 +592,19 @@ header {
           position: relative;
           z-index: 1;
           &::before {
-            @include pseudo-element("");
-            width: 0;
-            height: 100%;
-            top: 0;
-            left: 0;
-            transition-duration: 0.3s;
-            z-index: -1;
-          }
+          @include pseudo-element("");
+          width: 0;
+          height: 102%;
+          top: 50%;
+          transform: translateY(-50%);
+          left: 0;
+          transition-duration: 0.3s;
+          z-index: -1;
+          -webkit-transform: translateY(-50%);
+          -moz-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+          -o-transform: translateY(-50%);
+}
         }
       }
       &.card-1 {
@@ -1333,7 +1343,7 @@ header {
     }
   }
   .discount-form {
-    padding: 5em;
+    padding: .9em;
     h3 {
       font-size: 2rem;
       text-align: center;
@@ -1344,6 +1354,7 @@ header {
       flex-direction: column;
       row-gap: 1.5em;
       margin: auto;
+      max-width: 700px;
       input,
       textarea {
         width: 100%;
